<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select Rock Paper or Scissors to play.</string>
    <string name="statsTitle">Your all time statistics</string>
    <string name="stats">Win: Draw: Lose:</string>
    <string name="winOrLose">...</string>
    <string name="vs">V.S.</string>

    <string name="computer">Computer</string>
    <string name="you">you</string>

</resources>