<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructionsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/statsTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:text="@string/statsTitle"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/statsTitleTxt2"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:text="@string/stats"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/statsTxt"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/winOrLose"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgComputer"
                android:layout_width="88dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/paper" />

            <TextView
                android:id="@+id/resultTxt"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vs"
                android:textAlignment="gravity"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imgPlayerStart"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/paper" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/computer"
                android:textAlignment="center" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/you"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>
    <ImageButton
        android:id="@+id/btnRock"
        android:layout_width="102dp"
        android:layout_height="98dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryDark"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnPaper"
        android:layout_width="102dp"
        android:layout_height="98dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="16dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintStart_toEndOf="@+id/btnRock" />

    <ImageButton
        android:id="@+id/btnScissors"
        android:layout_width="102dp"
        android:layout_height="98dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryDark"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>